2007-05-01  Jim Krehl  <jimmyk@novell.com>
	* main-menu/src/main-menu-ui.c:
	Moved double-click debouncing to the button press handler of the panel
	button and adjusted the ptr/kbd grabbing design to pass clicks outside
	of the main-menu window but inside of the panel button to the panel
	button.  Fixes BNC #255065.

2007-04-24  Jim Krehl  <jimmyk@novell.com>
	* main-menu/src/main-menu-ui.c
	* libslab/libslab-utils.c
	* libslab/libslab-utils.h:
	Fix overflows in time arithmetic.

2007-03-29  Jim Krehl  <jimmyk@novell.com>
	* main-menu/src/main-menu-ui.c:
	Only make tiles for local files until remote files can be handled
	without blocking.

	* main-menu/src/main-menu-migration.c:
	Ensure local data exists before creating files.

	* main-menu/etc/applications.xbel
	* main-menu/etc/places.xbel
	* main-menu/etc/system-items.xbel:
	Include ranking info in the .xbel file.

	* libslab/bookmark-agent.c:
	Fix (instead of ignore) corrupted .xbel files.

2007-03-23  Jim Krehl  <jimmyk@novell.com>
	* libslab/app-resizer.c
	* libslab/search-context-picker.c
	* libslab/app-shell.c:
	Applied patch from Larry Ewing to fix some memory leaks, BNC #244456.

	* main-menu/etc/empty.ods
	* main-menu/etc/Makefile.am
	* libslab/bookmark-agent.c:
	Applied patch from Larry Ewing to create valid, empty .ods file, BNC
	#249188.

2007-03-18  Jim Krehl  <jimmyk@novell.com>
	* main-menu/src/main-menu-ui.c
	* libslab/libslab-utils.c
	* libslab/libslab-utils.h:
	Make the menu abide by /apps/panel/global/disable_{log_out,lock_screen}
	in gconf.

	* libslab/application-tile.c:
	Set the Upgrade/Uninstall action flags appropriately.

2007-03-16  Jim Krehl  <jimmyk@novell.com>
	* main-menu/src/main-menu-ui.c
	* main-menu/src/user-apps-tile-table.c
	* main-menu/src/user-apps-tile-table.h
	* main-menu/src/system-tile-table.c
	* main-menu/src/system-tile-table.h
	* main-menu/src/user-docs-tile-table.c
	* main-menu/src/user-docs-tile-table.h
	* main-menu/src/user-dirs-tile-table.c